--- a/Missionaries & Cannibals/MissionCanb.ipynb
+++ b/Missionaries & Cannibals/MissionCanb.ipynb
@@ -3,212 +3,210 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "# Contributor: Harsh Udai :)\r\n",
-    "\r\n",
-    "# Missionaries and Cannibals Puzzle Problem\r\n",
-    "# Approch-------\r\n",
-    "# 1. General state creation with the contraints.\r\n",
-    "# 2. Graph Creation from states.\r\n",
-    "# 3. States of both left and right side are cosidered.\r\n",
-    "# 3. Depth First Search used to find the path."
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# Contributor: Harsh Udai :)\n",
+    "\n",
+    "# Missionaries and Cannibals Puzzle Problem\n",
+    "# Approch-------\n",
+    "# 1. General state creation with the contraints.\n",
+    "# 2. Graph Creation from states.\n",
+    "# 3. States of both left and right side are cosidered.\n",
+    "# 3. Depth First Search used to find the path."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "source": [
-    "class MissionCaneb:\r\n",
-    "    def __init__(self,a,b):\r\n",
-    "        self.init_X=a\r\n",
-    "        self.init_Y=b\r\n",
-    "        self.fin_X=0\r\n",
-    "        self.fin_Y=0\r\n",
-    "        self.graph={}\r\n",
-    "        self.final=[]\r\n",
-    "        \r\n",
-    "    def state_S(self,a,b,c,d):\r\n",
-    "        l=[]\r\n",
-    "        if(self.error_RC(a-1,b-1,c+1,d+1)):\r\n",
-    "#             print(a-1,b-1,\" -> \",c+1,d+1)\r\n",
-    "            l.append([a-1,b-1,c+1,d+1])\r\n",
-    "            \r\n",
-    "        if(self.error_RC(a-2,b,c+2,d)):\r\n",
-    "#             print(a-2,b,\" -> \",c+2,d)\r\n",
-    "            l.append([a-2,b,c+2,d])\r\n",
-    "            \r\n",
-    "        if(self.error_RC(a,b-2,c,d+2)):\r\n",
-    "#             print(a,b-2,\" -> \",c,d+2)\r\n",
-    "            l.append([a,b-2,c,d+2])\r\n",
-    "            \r\n",
-    "        return l\r\n",
-    "            \r\n",
-    "    def error_RC(self,a,b,c,d):\r\n",
-    "        if((b>a and a!=0) or (d>c and c!=0) or (a<0 or b<0 or c<0 or d<0)):\r\n",
-    "            return 0\r\n",
-    "        else:\r\n",
-    "            return 1\r\n",
-    "        \r\n",
-    "    def return_State(self,a,b,c,d):\r\n",
-    "        l=[]\r\n",
-    "        \r\n",
-    "        if(self.error_RC(a+1,b+1,c-1,d-1)):\r\n",
-    "#             print(a+1,b+1,\" -> \",c-1,d-1)\r\n",
-    "            l.append([a+1,b+1,c-1,d-1])\r\n",
-    "            \r\n",
-    "        if(self.error_RC(a+1,b,c-1,d)):\r\n",
-    "#             print(a+1,b,\" -> \",c-1,d)\r\n",
-    "            l.append([a+1,b,c-1,d])\r\n",
-    "        \r\n",
-    "        if(self.error_RC(a,b+1,c,d-1)):\r\n",
-    "#             print(a,b+1,\" -> \",c,d-1)\r\n",
-    "            l.append([a,b+1,c,d-1])\r\n",
-    "        \r\n",
-    "        if(self.error_RC(a+2,b,c-2,d)):\r\n",
-    "#             print(a+2,b,\" -> \",c-2,d)\r\n",
-    "            l.append([a+2,b,c-2,d])\r\n",
-    "            \r\n",
-    "        if(self.error_RC(a,b+2,c,d-2)):\r\n",
-    "#             print(a,b+2,\" -> \",c,d-2)\r\n",
-    "            l.append([a,b+2,c,d-2])\r\n",
-    "            \r\n",
-    "        return l\r\n",
-    "        \r\n",
-    "    def addEdge(self,a,b,c,d,p,a1,b1,c1,d1,p1):\r\n",
-    "        \r\n",
-    "        if(self.graph.get((a,b,c,d,p))==None):\r\n",
-    "            self.graph[(a,b,c,d,p)]=[]\r\n",
-    "            self.graph[(a,b,c,d,p)].append((a1,b1,c1,d1,p1))\r\n",
-    "        else:\r\n",
-    "            self.graph[(a,b,c,d,p)].append((a1,b1,c1,d1,p1))\r\n",
-    "            \r\n",
-    "    def showGraph(self):\r\n",
-    "        print(self.graph)\r\n",
-    "        \r\n",
-    "    # DFS Technique\r\n",
-    "    def DFSUtil(self, u,v,u1,v1,p, visited,l):\r\n",
-    "\r\n",
-    "        visited.add((u,v,u1,v1,p))\r\n",
-    "        l.append((u,v,u1,v1,p))\r\n",
-    "        print(u,v,u1,v1,p, end='  ')\r\n",
-    "      \r\n",
-    "        if((u,v,u1,v1)==(self.fin_X,self.fin_Y,self.init_X,self.init_Y)):\r\n",
-    "            # print(\"mil gaya\")\r\n",
-    "            self.final = [i for i in l]\r\n",
-    "        \r\n",
-    "        if(self.graph.get((u,v,u1,v1,p))!=None):\r\n",
-    "            for neighbour in self.graph[(u,v,u1,v1,p)]:\r\n",
-    "                print(\"----------NBH\",neighbour)\r\n",
-    "                if neighbour not in visited:\r\n",
-    "                    self.DFSUtil(neighbour[0],neighbour[1],neighbour[2],neighbour[3],neighbour[4], visited,l)\r\n",
-    "                    \r\n",
-    "        else:\r\n",
-    "            l.pop()\r\n",
-    "            \r\n",
-    "    def DFS(self):\r\n",
-    "        u,v,u1,v1,p=self.init_X,self.init_Y,self.fin_X,self.fin_Y,'l'\r\n",
-    "        visited = set()\r\n",
-    "        l=[]\r\n",
-    "        self.DFSUtil(u,v,u1,v1,p, visited,l)\r\n",
-    "            \r\n",
-    "    def path(self):\r\n",
-    "        return self.final\r\n",
-    "        \r\n",
-    "    def stateFinder(self):\r\n",
-    "        \r\n",
-    "        duplicate_check=[]\r\n",
-    "        state_change=[]\r\n",
-    "        state_transfer=[]\r\n",
-    "        \r\n",
-    "        left_sider=[]\r\n",
-    "        right_sider=[]\r\n",
-    "        \r\n",
-    "        a,b,c,d=self.init_X,self.init_Y,self.fin_X,self.fin_Y\r\n",
-    "        state_change.append((a,b,c,d))\r\n",
-    "        duplicate_check.append((a,b,c,d))\r\n",
-    "        \r\n",
-    "        while(len(state_change)!=0):\r\n",
-    "            \r\n",
-    "            print(a,b,c,d)\r\n",
-    "            ans = self.state_S(a,b,c,d)\r\n",
-    "            print(\"Possible Nodes\",ans)\r\n",
-    "\r\n",
-    "            if(len(ans)==0 and len(state_change)==0):\r\n",
-    "                break\r\n",
-    "                \r\n",
-    "            elif(len(state_change)!=0 and len(ans)==0):\r\n",
-    "                state_change.pop(0)\r\n",
-    "                while(True and len(state_change)!=0):\r\n",
-    "                    a,b,c,d=state_change[0]\r\n",
-    "                    ans = self.state_S(a,b,c,d)\r\n",
-    "                    if(len(ans)!=0 or len(state_change)==0):\r\n",
-    "                        break\r\n",
-    "                    else:\r\n",
-    "                        state_change.pop(0)\r\n",
-    "                    print(\"Possible Nodes\",ans)\r\n",
-    "            \r\n",
-    "            if(len(state_change)==0):\r\n",
-    "                break\r\n",
-    "                \r\n",
-    "            state_transfer.append(state_change[0])\r\n",
-    "            state_change.pop(0)\r\n",
-    "            left_sider.append((a,b,c,d))\r\n",
-    "            \r\n",
-    "            for i in ans:\r\n",
-    "                \r\n",
-    "                self.addEdge(a,b,c,d,'l',i[0],i[1],i[2],i[3],'r')\r\n",
-    "                \r\n",
-    "                if ((i[0],i[1],i[2],i[3]) not in duplicate_check):\r\n",
-    "                    duplicate_check.append((i[0],i[1],i[2],i[3]))\r\n",
-    "                    right_sider.append((i[0],i[1],i[2],i[3]))\r\n",
-    "                    \r\n",
-    "                print(\"Possible return edge\",self.return_State(i[0],i[1],i[2],i[3]))\r\n",
-    "                \r\n",
-    "                for j in self.return_State(i[0],i[1],i[2],i[3]):\r\n",
-    "                    if((j[0],j[1],j[2],j[3])!=(a,b,c,d) and (j[0],j[1],j[2],j[3]) not in state_transfer and \r\n",
-    "                      (j[0],j[1],j[2],j[3]) not in state_change ):\r\n",
-    "                        state_change.append((j[0],j[1],j[2],j[3]))\r\n",
-    "                        self.addEdge(i[0],i[1],i[2],i[3],'r',j[0],j[1],j[2],j[3],'l')\r\n",
-    "                        \r\n",
-    "                        \r\n",
-    "            \r\n",
-    "            print(\"state Change\",state_change)\r\n",
-    "            # print(\"State Transfer\",state_transfer)\r\n",
-    "            # print(\"Left sider\",left_sider)\r\n",
-    "            # print(\"Right_sider\",right_sider)\r\n",
-    "            # print(\"Graph\",self.graph)\r\n",
-    "\r\n",
-    "            if(len(state_change)==0):\r\n",
-    "                break\r\n",
-    "\r\n",
-    "            print(\"----------------------------------\",\"done\") \r\n",
-    "            a,b,c,d = state_change[0]\r\n"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "class MissionCaneb:\n",
+    "    def __init__(self,a,b):\n",
+    "        self.init_X=a\n",
+    "        self.init_Y=b\n",
+    "        self.fin_X=0\n",
+    "        self.fin_Y=0\n",
+    "        self.graph={}\n",
+    "        self.final=[]\n",
+    "        \n",
+    "    def state_S(self,a,b,c,d):\n",
+    "        l=[]\n",
+    "        if(self.error_RC(a-1,b-1,c+1,d+1)):\n",
+    "#             print(a-1,b-1,\" -> \",c+1,d+1)\n",
+    "            l.append([a-1,b-1,c+1,d+1])\n",
+    "            \n",
+    "        if(self.error_RC(a-2,b,c+2,d)):\n",
+    "#             print(a-2,b,\" -> \",c+2,d)\n",
+    "            l.append([a-2,b,c+2,d])\n",
+    "            \n",
+    "        if(self.error_RC(a,b-2,c,d+2)):\n",
+    "#             print(a,b-2,\" -> \",c,d+2)\n",
+    "            l.append([a,b-2,c,d+2])\n",
+    "            \n",
+    "        return l\n",
+    "            \n",
+    "    def error_RC(self,a,b,c,d):\n",
+    "        if((b>a and a!=0) or (d>c and c!=0) or (a<0 or b<0 or c<0 or d<0)):\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return 1\n",
+    "        \n",
+    "    def return_State(self,a,b,c,d):\n",
+    "        l=[]\n",
+    "        \n",
+    "        if(self.error_RC(a+1,b+1,c-1,d-1)):\n",
+    "#             print(a+1,b+1,\" -> \",c-1,d-1)\n",
+    "            l.append([a+1,b+1,c-1,d-1])\n",
+    "            \n",
+    "        if(self.error_RC(a+1,b,c-1,d)):\n",
+    "#             print(a+1,b,\" -> \",c-1,d)\n",
+    "            l.append([a+1,b,c-1,d])\n",
+    "        \n",
+    "        if(self.error_RC(a,b+1,c,d-1)):\n",
+    "#             print(a,b+1,\" -> \",c,d-1)\n",
+    "            l.append([a,b+1,c,d-1])\n",
+    "        \n",
+    "        if(self.error_RC(a+2,b,c-2,d)):\n",
+    "#             print(a+2,b,\" -> \",c-2,d)\n",
+    "            l.append([a+2,b,c-2,d])\n",
+    "            \n",
+    "        if(self.error_RC(a,b+2,c,d-2)):\n",
+    "#             print(a,b+2,\" -> \",c,d-2)\n",
+    "            l.append([a,b+2,c,d-2])\n",
+    "            \n",
+    "        return l\n",
+    "        \n",
+    "    def addEdge(self,a,b,c,d,p,a1,b1,c1,d1,p1):\n",
+    "        \n",
+    "        if(self.graph.get((a,b,c,d,p))==None):\n",
+    "            self.graph[(a,b,c,d,p)]=[]\n",
+    "            self.graph[(a,b,c,d,p)].append((a1,b1,c1,d1,p1))\n",
+    "        else:\n",
+    "            self.graph[(a,b,c,d,p)].append((a1,b1,c1,d1,p1))\n",
+    "            \n",
+    "    def showGraph(self):\n",
+    "        print(self.graph)\n",
+    "        \n",
+    "    # DFS Technique\n",
+    "    def DFSUtil(self, u,v,u1,v1,p, visited,l):\n",
+    "\n",
+    "        visited.add((u,v,u1,v1,p))\n",
+    "        l.append((u,v,u1,v1,p))\n",
+    "        print(u,v,u1,v1,p, end='  ')\n",
+    "      \n",
+    "        if((u,v,u1,v1)==(self.fin_X,self.fin_Y,self.init_X,self.init_Y)):\n",
+    "            # print(\"mil gaya\")\n",
+    "            self.final = [i for i in l]\n",
+    "        \n",
+    "        if(self.graph.get((u,v,u1,v1,p))!=None):\n",
+    "            for neighbour in self.graph[(u,v,u1,v1,p)]:\n",
+    "                print(\"----------NBH\",neighbour)\n",
+    "                if neighbour not in visited:\n",
+    "                    self.DFSUtil(neighbour[0],neighbour[1],neighbour[2],neighbour[3],neighbour[4], visited,l)\n",
+    "                    \n",
+    "        else:\n",
+    "            l.pop()\n",
+    "            \n",
+    "    def DFS(self):\n",
+    "        u,v,u1,v1,p=self.init_X,self.init_Y,self.fin_X,self.fin_Y,'l'\n",
+    "        visited = set()\n",
+    "        l=[]\n",
+    "        self.DFSUtil(u,v,u1,v1,p, visited,l)\n",
+    "            \n",
+    "    def path(self):\n",
+    "        return self.final\n",
+    "        \n",
+    "    def stateFinder(self):\n",
+    "        \n",
+    "        duplicate_check=[]\n",
+    "        state_change=[]\n",
+    "        state_transfer=[]\n",
+    "        \n",
+    "        left_sider=[]\n",
+    "        right_sider=[]\n",
+    "        \n",
+    "        a,b,c,d=self.init_X,self.init_Y,self.fin_X,self.fin_Y\n",
+    "        state_change.append((a,b,c,d))\n",
+    "        duplicate_check.append((a,b,c,d))\n",
+    "        \n",
+    "        while(len(state_change)!=0):\n",
+    "            \n",
+    "            print(a,b,c,d)\n",
+    "            ans = self.state_S(a,b,c,d)\n",
+    "            print(\"Possible Nodes\",ans)\n",
+    "\n",
+    "            if(len(ans)==0 and len(state_change)==0):\n",
+    "                break\n",
+    "                \n",
+    "            elif(len(state_change)!=0 and len(ans)==0):\n",
+    "                state_change.pop(0)\n",
+    "                while(True and len(state_change)!=0):\n",
+    "                    a,b,c,d=state_change[0]\n",
+    "                    ans = self.state_S(a,b,c,d)\n",
+    "                    if(len(ans)!=0 or len(state_change)==0):\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        state_change.pop(0)\n",
+    "                    print(\"Possible Nodes\",ans)\n",
+    "            \n",
+    "            if(len(state_change)==0):\n",
+    "                break\n",
+    "                \n",
+    "            state_transfer.append(state_change[0])\n",
+    "            state_change.pop(0)\n",
+    "            left_sider.append((a,b,c,d))\n",
+    "            \n",
+    "            for i in ans:\n",
+    "                \n",
+    "                self.addEdge(a,b,c,d,'l',i[0],i[1],i[2],i[3],'r')\n",
+    "                \n",
+    "                if ((i[0],i[1],i[2],i[3]) not in duplicate_check):\n",
+    "                    duplicate_check.append((i[0],i[1],i[2],i[3]))\n",
+    "                    right_sider.append((i[0],i[1],i[2],i[3]))\n",
+    "                    \n",
+    "                print(\"Possible return edge\",self.return_State(i[0],i[1],i[2],i[3]))\n",
+    "                \n",
+    "                for j in self.return_State(i[0],i[1],i[2],i[3]):\n",
+    "                    if((j[0],j[1],j[2],j[3])!=(a,b,c,d) and (j[0],j[1],j[2],j[3]) not in state_transfer and \n",
+    "                      (j[0],j[1],j[2],j[3]) not in state_change ):\n",
+    "                        state_change.append((j[0],j[1],j[2],j[3]))\n",
+    "                        self.addEdge(i[0],i[1],i[2],i[3],'r',j[0],j[1],j[2],j[3],'l')\n",
+    "                        \n",
+    "                        \n",
+    "            \n",
+    "            print(\"state Change\",state_change)\n",
+    "            # print(\"State Transfer\",state_transfer)\n",
+    "            # print(\"Left sider\",left_sider)\n",
+    "            # print(\"Right_sider\",right_sider)\n",
+    "            # print(\"Graph\",self.graph)\n",
+    "\n",
+    "            if(len(state_change)==0):\n",
+    "                break\n",
+    "\n",
+    "            print(\"----------------------------------\",\"done\") \n",
+    "            a,b,c,d = state_change[0]\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "source": [
-    "# Here input the no of missionaries and cannibals on the left side of river bank.\r\n",
-    "MC = MissionCaneb(3,3)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# Here input the no of missionaries and cannibals on the left side of river bank.\n",
+    "MC = MissionCaneb(3,3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "source": [
-    "MC.stateFinder()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "3 3 0 0\n",
       "Possible Nodes [[2, 2, 1, 1], [3, 1, 0, 2]]\n",
@@ -252,35 +250,35 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "MC.stateFinder()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "source": [
-    "MC.showGraph()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "{(3, 3, 0, 0, 'l'): [(2, 2, 1, 1, 'r'), (3, 1, 0, 2, 'r')], (2, 2, 1, 1, 'r'): [(3, 2, 0, 1, 'l')], (3, 2, 0, 1, 'l'): [(3, 0, 0, 3, 'r')], (3, 0, 0, 3, 'r'): [(3, 1, 0, 2, 'l')], (3, 1, 0, 2, 'l'): [(1, 1, 2, 2, 'r')], (1, 1, 2, 2, 'r'): [(2, 2, 1, 1, 'l')], (2, 2, 1, 1, 'l'): [(1, 1, 2, 2, 'r'), (0, 2, 3, 1, 'r')], (0, 2, 3, 1, 'r'): [(0, 3, 3, 0, 'l')], (0, 3, 3, 0, 'l'): [(0, 1, 3, 2, 'r')], (0, 1, 3, 2, 'r'): [(1, 1, 2, 2, 'l'), (0, 2, 3, 1, 'l')], (1, 1, 2, 2, 'l'): [(0, 0, 3, 3, 'r')], (0, 0, 3, 3, 'r'): [(0, 1, 3, 2, 'l')], (0, 2, 3, 1, 'l'): [(0, 0, 3, 3, 'r')]}\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "MC.showGraph()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "source": [
-    "MC.DFS()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "3 3 0 0 l  ----------NBH (2, 2, 1, 1, 'r')\n",
       "2 2 1 1 r  ----------NBH (3, 2, 0, 1, 'l')\n",
@@ -302,18 +300,16 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "MC.DFS()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
-   "source": [
-    "# Final path/transitions to transfer missionaries and cannibals from left to right.\r\n",
-    "MC.path()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[(3, 3, 0, 0, 'l'),\n",
@@ -330,41 +326,45 @@
        " (0, 0, 3, 3, 'r')]"
       ]
      },
+     "execution_count": 33,
      "metadata": {},
-     "execution_count": 33
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Final path/transitions to transfer missionaries and cannibals from left to right.\n",
+    "MC.path()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "1108e07560c816db3f292dfdcdd2a77461e2626b1e081309fb4cec7b75e73e64"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.3 32-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.3",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.3 32-bit"
-  },
-  "interpreter": {
-   "hash": "1108e07560c816db3f292dfdcdd2a77461e2626b1e081309fb4cec7b75e73e64"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
