--- a/8 Puzzle Problem/puzzleHeuristic.ipynb
+++ b/8 Puzzle Problem/puzzleHeuristic.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "# 8 Puzzle Problem\n",
     "# Approch-------\n",
-    "# 1. General state creation with the contraints(matrix).\n",
+    "# 1. General state creation with the constraints(matrix).\n",
     "# 2. At each step cost of the  states is calculated and then the node with minimum cost is selected.\n",
     "# 3. In this way we optimally find the goal state, the solution is better than BFS and DFS search algo."
    ]
